docs: Add comprehensive documentation and update spec files (2026-01-27)
- Add API_MODIFICATION_GUIDE.md with detailed instructions for modifying APIs, images, text, translations, pricing, trust scores, and voice interface
- Add WHERE_TO_FIND_WHAT.md as quick reference guide for locating code and functionality
- Update requirements.md with project context and documentation references
- Create detailed guides for common modification scenarios
- Include testing procedures and troubleshooting tips

Files modified: docs/API_MODIFICATION_GUIDE.md, docs/WHERE_TO_FIND_WHAT.md, .kiro/specs/multilingual-mandi/requirements.md
Refs: Documentation consolidation and spec enhancement

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Multilingual Mandi - Trade in Your Language</title>
+    <title>Lokal Mandi - Trade in Your Language</title>
     <meta name="description" content="Real-time linguistic bridge for local trade in India. Voice-based price discovery, AI negotiation, and transparent pricing." />
   </head>
   <body>
